@@ -1,6 +1,7 @@
 2004-02-14  ujwal
 
 	* Fixed bug in VT100Screen: setString when text wraps.
+	* Drawing a nicer cursor. We can later allow the user to pick cursor color.
 
 2004-02-13  ujwal
 
